# PyWarden

./: .gitignore  README.md  build.sh  pyproject.toml  pywarden_config_template.yaml  requirements.txt  setup.cfg
examples/ansible/ansible-role-pywarden/defaults/: main.yml
examples/ansible/ansible-role-pywarden/handlers/: main.yml
examples/ansible/ansible-role-pywarden/tasks/: main.yml
examples/ansible/ansible-role-pywarden/templates/: pywarden_config.yaml.j2
examples/ansible/ansible-role-pywarden/tests/: test.yml
examples/ansible/ansible-role-pywarden/vars/: main.yml
pywarden/: main.py
pywarden/api/: get_ids.py  token.py
pywarden/classes/: classes.py
pywarden/cli/: create_collection.py  create_item.py  general_tasks.py  get_items.py  get_list.py  get_template.py
pywarden/handler/: arg_parse.py
pywarden/logger/: logger.py
pywarden/login/: login.py  status.py  sync.py  unlock.py
pywarden/pywarden/: conf_file.py  gen_config.py  handle_config.py  version.py
src/pywarden/: main.py
src/pywarden/api/: get_ids.py  token.py
src/pywarden/cli/: create_collection.py  create_item.py  gen_secret.py  general_tasks.py  get_items.py  get_list.py  get_template.py
src/pywarden/handler/: arg_parse.py
src/pywarden/login/: status.py  sync.py  unlock.py
src/pywarden/pywarden/: gen_config.py  version.py
