[project]
name = "PyWarden"
version = "0.0.1"
authors = [
  { name="Stefan Fluit", email="stefan@fluit-online.nl" },
]
description = "A pip package that interacts with Bitwarden, without interruption."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stefanfluit/PyWarden"
"Bug Tracker" = "https://github.com/stefanfluit/PyWarden/issues"
