[metadata]
name = PyWarden
version = 0.1.7
description = A pip package that interacts with Bitwarden, without interruption.
long_description = https://github.com/stefanfluit/PyWarden
keywords = Bitwarden, CLI, Python, PyWarden
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = pywarden, pywarden.api, pywarden.classes, pywarden.cli, pywarden.handler, pywarden.logger, pywarden.login, pywarden.pywarden

[options.entry_points]
console_scripts =
    pywarden = pywarden.handler:arg_parse.arg_parse
    PyWarden = pywarden.handler:arg_parse.arg_parse
